<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">TFS VK</string>

    <string name="label_menu_news">News</string>
    <string name="label_menu_favorites">Favorites</string>
    <string name="label_menu_profile">Profile</string>

    <string name="text_error_dialog">Error</string>
    <string name="text_positive_button_error_dialog">OK</string>
    <string name="plc_empty_list_error">Failed to load recommendation data again.</string>
    <string name="plc_empty_list">It looks like this is empty for now. Come back later.</string>
    <string name="toast_failed_load">Failed to load image</string>
    <string name="toast_successfully_download">Download successfully</string>
    <string name="text_share_intent">Send</string>
    <string name="label_fresh_items">Fresh entries</string>

    <string name="label_internet_error">Internet connection not available</string>
    <string name="label_last_seen">Was online: %s</string>
    <string name="label_about">About me: %s.</string>
    <string name="label_birthday">Birthday: %s.</string>
    <string name="label_home_town">Hometown: %s.</string>
    <string name="label_city">City: %s.</string>
    <string name="label_career">Career: %s.</string>
    <string name="label_education">Education: %s.</string>
    <string name="label_relation">Marital status: %s.</string>
    <string name="label_not_indicated">not specified</string>

    <string-array name="relation_status">
        <item>@string/label_not_indicated</item>
        <item>not married</item>
        <item>have a boyfriend/girlfriend</item>
        <item>engaged</item>
        <item>married</item>
        <item>everything is complicated</item>
        <item>Actively Searching</item>
        <item>in love</item>
        <item>in a civil marriage</item>
    </string-array>

    <string name="message_unknown_host_exception">No internet connection.</string>
    <string name="message_error_default">An error occurred while processing the request.</string>

    <string name="content_description" translatable="false">contentDescription</string>
    <string name="label_create_post_hint">What\'s new with you?</string>
    <string name="label_create_post_title">New post</string>
    <string name="label_comment">Write a comment</string>
    <string name="label_comment_disabled">Comments are closed</string>

    <integer name="com_vk_sdk_AppId" tools:ignore="UnusedResources">7636667</integer>
</resources>